# Vanana

./: README.md  build_windows.py  com.github.XtremeTHN.Vanana.json  flake.nix  meson.build  result  test  test.vala  vanana_xd
.direnv/: flake-profile-1-link
data/: com.github.XtremeTHN.Vanana.desktop.in  com.github.XtremeTHN.Vanana.gschema.xml  com.github.XtremeTHN.Vanana.metainfo.xml.in  com.github.XtremeTHN.Vanana.service.in  meson.build
data/icons/: meson.build
po/: POTFILES.in  meson.build
src/: application.vala  cache.vala  home_page.vala  html.vala  main.vala  meson.build  mod_page.vala  screenshot.vala  sidebar.vala  sub_download_dialog.vala  submission_item.vala  top_submission.vala  utils.vala  vanana.gresource.xml  window.vala
src/api/: gamebanana.vala  manager.vala  submissions.vala  user.vala
src/pages/: downloadable_page.vala  home_page.vala  mod_page.vala  question_page.vala  submission_page.vala  wip_page.vala
src/ui/: comment.blp  download-dialog.blp  download-item.blp  download-row.blp  downloadable-page.blp  downloads-dialog.blp  downloads-page.blp  home-page.blp  home_page.vala  image-view-dialog.blp  loading-btt.blp  login.blp  meson copy.build  meson.build  mod-page.blp  navigation.blp  news-page.blp  page-bar.blp  question-page.blp  screenshot.blp  search-page.blp  sidebar.blp  style.css  submission-button.blp  submission-download-dialog.blp  submission-item.blp  submission-page.blp  top-submission.blp  tutorial-page.blp  window.blp  window.vala  wip-page.blp
src/widgets/: comment.vala  html.vala  image_view.vala  loading_btt.vala  login_dialog.vala  screenshot.vala  sidebar.vala  submission_data.vala  submission_item.vala  submissions_page.vala  top_submission.vala  window.vala
src/widgets/pages/: downloadable_page.vala  home_page.vala  question_page.vala  submission_page.vala  tutorial_page.vala  wip_page.vala
