blueprints = custom_target('blueprints',
  input: files(
    'home-page.blp',
    'sidebar.blp',
    'comment.blp',
    'submission-page.blp',
    'downloadable-page.blp',
    'question-page.blp',
    'tutorial-page.blp',
    'login.blp',
    'screenshot.blp',
    'download-dialog.blp',
    'download-row.blp',
    'submission-item.blp',
    'top-submission.blp',
    'wip-page.blp',
    'window.blp'
  ),
  output: '.',
  command: [find_program('blueprint-compiler'), 'batch-compile', '@OUTPUT@', '@CURRENT_SOURCE_DIR@', '@INPUT@'],
)