blueprints = custom_target(
  'blueprints',
  input: files(
    'comment.blp',
    'download-dialog.blp',
    'download-row.blp',
    'downloadable-page.blp',
    'home-page.blp',
    'loading-btt.blp',
    'question-page.blp',
    'screenshot.blp',
    'sidebar.blp',
    'submission-item.blp',
    'submission-page.blp',
    'top-submission.blp',
    'tutorial-page.blp',
    'window.blp',
    'wip-page.blp',
  ),
  output: '.',
  command: [
    find_program('blueprint-compiler'),
    'batch-compile',
    '@OUTPUT@',
    '@CURRENT_SOURCE_DIR@',
    '@INPUT@',
  ],
)